force-app/main/default/objects/Order/fields/Applied_Offer__c.field-meta.xml
<CustomField>
    <fullName>Applied_Offer__c</fullName>
    <label>Applied Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>