force-app/main/default/objects/Order/fields/Applied_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Applied_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>