force-app/main/default/objects/Order/fields/Booking_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Auto_Number__c</fullName>
    <displayFormat>BN-{00000}</displayFormat>
    <label>Booking Auto Number</label>
    <type>AutoNumber</type>
</CustomField>