force-app/main/default/objects/Order/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <defaultValue>IF($RecordType.Name = &apos;Dealer&apos; || $RecordType.Name = &apos;Retailer&apos;,&apos;SalesRep&apos;,&apos;DMS&apos;)</defaultValue>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Salesrep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>