force-app/main/default/objects/Order/fields/Coupon_Id__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Id__c</fullName>
    <label>Coupon Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>