force-app/main/default/objects/Order/fields/Credit_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Days__c</fullName>
    <formula>IF(AND(DAY(EffectiveDate) = DAY(TODAY())-31, Credit_Remaining__c  &gt; 0), ADDMONTHS(EffectiveDate,1) - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>