force-app/main/default/objects/Order/fields/Credit_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Credit_Remaining__c</fullName>
    <formula>Account.Available_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>