force-app/main/default/objects/Order/fields/External_ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>External_ERP_Id__c</fullName>
    <formula>IF( OR(ISPICKVAL(Status, &quot;Confirmed&quot;),ISPICKVAL(Status, &quot;Booked&quot;),
ISPICKVAL(Status, &quot;Out For Delivery&quot;), ISPICKVAL(Status, &quot;Delivered&quot;) ),
Booking_Auto_Number__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External ERP Id</label>
    <type>Text</type>
</CustomField>