force-app/main/default/objects/Order/fields/Grand_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Amount__c</fullName>
    <formula>TotalAmount -  Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>