force-app/main/default/objects/Order/fields/Is_Inventory_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Inventory_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Inventory Order</label>
    <type>Checkbox</type>
</CustomField>