force-app/main/default/objects/Order/fields/Line_Discount__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Discount</label>
    <type>Checkbox</type>
</CustomField>