force-app/main/default/objects/Order/fields/Pending_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Action_Date__c</fullName>
    <formula>EffectiveDate + 3</formula>
    <label>Pending Action Date</label>
    <type>Date</type>
</CustomField>