force-app/main/default/objects/Order/fields/Retailer_Account__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>