force-app/main/default/objects/Order/fields/Stockist_Name__c.field-meta.xml
<CustomField>
    <fullName>Stockist_Name__c</fullName>
    <formula>Account.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stockist Name</label>
    <type>Text</type>
</CustomField>