force-app/main/default/objects/Order/recordTypes/PartnerDealer.recordType-meta.xml
<RecordType>
    <fullName>PartnerDealer</fullName>
    <active>true</active>
    <label>PartnerDealer</label>
</RecordType>