force-app/main/default/objects/Order/recordTypes/PartnerRetailer.recordType-meta.xml
<RecordType>
    <fullName>PartnerRetailer</fullName>
    <active>true</active>
    <label>PartnerRetailer</label>
</RecordType>