force-app/main/default/objects/Order/recordTypes/ReadOnlyDMSDealer.recordType-meta.xml
<RecordType>
    <fullName>ReadOnlyDMSDealer</fullName>
    <active>true</active>
    <label>ReadOnlyDMSDealer</label>
</RecordType>