force-app/main/default/objects/Order/recordTypes/ReadOnlyDMSRetailer.recordType-meta.xml
<RecordType>
    <fullName>ReadOnlyDMSRetailer</fullName>
    <active>true</active>
    <label>ReadOnlyDMSRetailer</label>
</RecordType>